# hyeo-ung-lang

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  index.html  install_hyeong.bat  install_hyeong.cmd  install_hyeong.sh  install_without_build.cmd  install_without_build.sh
.github/: dependabot.yml
.github/workflows/: coverage.yml  deploy.yml  main.yml
ci/: install-rust.sh  make-release.sh
examples/: hello_world.hyeong
examples/1_to_8/: .gitignore  1_to_8.hyeong  README.md
examples/a_mult_b/: .gitignore  README.md  a_mult_b.hyeong
examples/a_plus_b/: .gitignore  README.md  a_plus_b.hyeong
examples/hello_world/: .gitignore  README.md  hello_world.hyeong
examples/print4/: print4.hyeong
number/: Cargo.toml
number/src/: big_number.rs  lib.rs  num.rs
src/: README.md  area.rs  big_number.rs  build.rs  check.rs  code.js  code.rs  commands.rs  compile.rs  core.rs  debug.rs  execute.js  execute.rs  ext.rs  hyeong.rs  init.rs  interpreter.rs  io.rs  lib.rs  main.js  main.rs  number.rs  optimize.rs  option.rs  parse.js  parse.rs  run.rs  state.rs  update.rs
src/app/: build.rs  check.rs  debug.rs  init.rs  interpreter.rs  mod.rs  run.rs
src/core/: area.rs  code.rs  compile.rs  execute.rs  mod.rs  optimize.rs  parse.rs  state.rs
src/hyeong/: area.rs  code.rs  compile.rs  execute.rs  optimize.rs  parse.rs  state.rs  write_rust.rs
src/number/: big_number.rs  mod.rs  num.rs  number.rs
src/util/: error.rs  ext.rs  io.rs  mod.rs  option.rs  util.rs
style/: style.css
tests/: big_number_test.rs  build_test.rs  code_test.rs  execute_test.rs  io_test.rs  number_test.rs  optimize_test.rs  parse_test.rs
