[package]
name = "hyeong"
version = "0.2.2"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/buttercrab/hyeo-ung-lang"
repository = "https://github.com/buttercrab/hyeo-ung-lang"
description = "Hyeo-ung Programming Language Compiler"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
readme = "README.md"

[badges]
travis-ci = { repository = "buttercrab/hyeo-ung-lang" }

[features]
default = ["clap", "ctrlc", "termcolor"]
number = []

[dependencies]
clap = { version = "4.0.8", optional = true }
ctrlc = { version = "3.0", features = ["termination"], optional = true }
termcolor = { version = "1.1", optional = true }

[[bin]]
path = "src/main.rs"
name = "hyeong"