[package]
name = "hyeong"
version = "0.3.0"
authors = ["buttercrab <jaeyong0201@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/buttercrab/hyeo-ung-lang"
repository = "https://github.com/buttercrab/hyeo-ung-lang"
description = "Hyeo-ung Programming Language Compiler"
include = [
    "number/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
readme = "README.md"

[workspace]
members = ["number"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
derive_more = "0.99"
dirs = "5"
fern = "0.6"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
lazy_static = "1.4"
log = "0.4"
nom = "7"
nom_locate = "4.1"
number = { path = "number" }
rustyline = "11"

[[bin]]
path = "src/main.rs"
name = "hyeong"
